# nr-events

./: .gitignore  .travis.yml  database.db  pyproject.toml  pytest.ini
.github/workflows/: main.yml
nr_events/: api.py  config.py  constants.py  minters.py  providers.py  proxies.py  record.py  search.py  version.py
nr_events/jsonschemas/nr_events/: nr-events-v1.0.0.json
nr_events/mappings/v7/nr_events/: nr-events-v1.0.0.json
nr_events/marshmallow/: json.py  subschemas.py
scripts/: extract.py
tests/: conftest.py  test_fetcher.py  test_jsonschema.py  test_mapping.py  test_marshmallow.py  test_marshmallow_subschemas.py  test_minter.py  test_record.py  test_references.py
