[tool]
[tool.poetry]
name = "nr-events"
version = "1.0.0a4"
description = "National repository events metadata model"
license = "MIT"
keywords = ["National repository", "events"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content", "Topic :: Software Development :: Libraries :: Python Modules", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.7", "Development Status :: 3 - Planning"]
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
oarepo = { version = "^3.3", optional = true }
oarepo-invenio-model = "^2.0.1"
oarepo-multilingual = "^2.2.0"
oarepo-records-draft = "^5.0.0a7"
oarepo-references = "^1.8.1"
oarepo-taxonomies = "^2.4.1"
oarepo-validate = "^1.2.8"
pytest = { version = "^5.0.0", optional = true }
pytest-cov = { version = "^2.10.1", optional = true }
nr-common = { git = "https://github.com/Narodni-repozitar/nr-common.git", branch = "master" }
pytest-runner = "^5.2"

[tool.poetry.extras]
tests = ["oarepo", "pytest", "pytest-cov"]

[tool.poetry.plugins]
[tool.poetry.plugins."invenio_base.apps"]
'events' = 'nr_events:NREvents'

[tool.poetry.plugins."invenio_base.api_apps"]
'events' = 'nr_events:NREvents'

[tool.poetry.plugins.'invenio_jsonschemas.schemas']
'nr_events' = 'nr_events.jsonschemas'

[tool.poetry.plugins.'invenio_search.mappings']
'nr_events' = 'nr_events.mappings'

[tool.poetry.plugins.'oarepo_mapping_includes']
'nr_events' = 'nr_events.mapping_includes'

[tool.poetry.plugins."invenio_pidstore.minters"]
'nr_events' = 'nr_events.minters:nr_events_id_minter'

[tool.poetry.plugins."invenio_pidstore.fetchers"]
'nr_events' = 'nr_events.fetchers:nr_events_id_fetcher'

